Tue Dec 19 01:32:56 2000  George Lebl <jirka@5z.com>

	* aligned-widget.[ch], basep-widget.[ch], border-widget.[ch],
	  drawer-widget.[ch], drawer.c, edge-widget.[ch],
	  floating-widget.[ch], menu.c, panel.c, panel_config.[ch],
	  session.c, sliding-widget.[ch]:  Implement avoid on maximize
	  thing as a property of a panel, and implement per panel ability
	  to set layering (or use the default).  Also fix updating of
	  hidebutton properties on the dialog if they are changed from
	  the menu.

	* gnome-panel-properties.c, session.c:  Fix default layering
	  properties.  Also fix some fragmented senteces and layout
	  issues as pointed out by Karl Eichwalder <keichwa@gmx.net>

Mon Dec 18 15:08:07 2000  George Lebl <jirka@5z.com>

	* extern.c: when an applet is being loaded, put in a small pic
	  in it's place to indicate it's being loaded.  Right now using
	  gnome-unknown.png, but it needs to be changed to something
	  nicer.  Needs to have no transparent spots.

Sun Dec 17 00:04:20 2000  George Lebl <jirka@5z.com>

	* extern.c: always check if ext->applet isn't by any chance %NULL.
	  I think it can happen when an applet dies too quickly, but it's
	  just a guess.  Anyway, it's good to be paranoid.

Tue Dec 05 20:03:09 2000  George Lebl <jirka@5z.com>

	* applet-widget.c: initialize frozen stuff, just being fussy, that
	  it worked before, but it's not more explicit.

	* extern.c, panel.[ch]: freeze change info on initial send, to
	  make things not jump around so much.

Sun Dec 03 15:41:33 2000  George Lebl <jirka@5z.com>

	* menu-fentry.c, menu.c, drawer.[ch]:  Fix leak pointed out by
	  Juan Pablo Mendoza <pablo_juan@yahoo.com>, plus several other minor
	  memleaks.  Also a bunch of cleanup and some sanity fixes.  Also
	  some constization.

Sat Dec 02 23:34:09 2000  George Lebl <jirka@5z.com>

	* panel.c, menu.c: fix the unref ugliness by removing the signal
	  connection when creating the root panel menu.
