@@ -21,10 +21,6 @@ Things to do on the panel, in no particular order:
 * Tasklist panel that works sort of like BeOS deskbar or whatever that's called
   or like win95 taskbar, with all the hiding etc...
 
-* Per panel setting of the level (above, below, same as other windows)
-
-* Per panel setting of if to ignore or not ignore this panel when maximizing
-
 Vertigo/2.0 items
 
 * Bonobo the whole bit, that is:  Make the whole thing bonobo components, to
