@@ -1,3 +1,8 @@
+Tue Dec 19 14:24:43 2000  George Lebl <jirka@5z.com>
+
+	* xstuff.[ch], foobar-widget.c, basep-widget.c:  On panel windows,	
+	  unset the input hint thing as well as requested by jsh.
+
 Tue Dec 19 01:32:56 2000  George Lebl <jirka@5z.com>
 
 	* aligned-widget.[ch], basep-widget.[ch], border-widget.[ch],
